Updated details for Nasa POTD area.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
 								<h3><a href="#">Nasa Photo of the Day</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<p>This project focused on learning how to use api calls, how to work with the promise returned from an api call, and how to use api keys.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
