Added Pintereach to portfolio as well as clickable links and changed title.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Cara Locke</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -88,16 +88,16 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
-								<h3><a href="#">Nasa Photo of the Day</a></h3>
+								<a href="https://nasa-photo-of-the-day-taupe.vercel.app/" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
+								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/">Nasa Photo of the Day</a></h3>
 								<p>This project focused on learning how to use api calls, how to work with the promise returned from an api call, and how to use api keys.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://front-end-rho-sable.vercel.app/" class="image featured"><img src="images/Pintereach.png" alt="" /></a>
+								<h3><a href="https://front-end-rho-sable.vercel.app/">Pintereach</a></h3>
+								<p>This project was my first working as a team. For my contributions, I was asked to do the styling of the components as well as create the navigation bar.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
