Updated 'the stuff I do'

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Currently I'm focusing on Web Development, but I plan to learn to make mobile and desktop apps as well (Maybe even some games!).</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
