--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Test</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://frontend-nine-omega.vercel.app/" class="image featured"><img src="images/WaterMyPlants.png" alt="" /></a>
+								<h3><a href="#">🌱 Water My Plants 🌱</a></h3>
+								<p>For "Water My Plants," I worked with some fantastic team members. My contributions were to help with the functionality (using JavaScript and React) as well as setting up routes and links.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
