Added a new project and working on contact info.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Cara Locke</strong>.</h1>
 							</header>
-							<p>And this is <strong>my portfolio</strong>. I'm a web developer currently with skills in JavaScript, React, Redux, CSS, and HTML.</p>
+							<p>And this is <strong>my portfolio</strong>. I'm a web developer currently with skills in JavaScript, React, Redux, Python, Node.js, CSS, and HTML.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://nasa-photo-of-the-day-taupe.vercel.app/" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
-								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/">Nasa Photo of the Day</a></h3>
+								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/">Nasa Photo of the Day 🚀</a></h3>
 								<p>This project focused on learning how to use api calls, how to work with the promise returned from an api call, and how to use api keys.</p>
 							</article>
 						</div>
@@ -109,9 +109,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://potluck-planner-07.netlify.app/" class="image featured"><img src="images/Potluck.png" alt="" /></a>
+								<h3><a href="#">Potluck Planner</a></h3>
+								<p>Potluck Planner was my first ever project where I built a RESTful API for a fullstack web application. Using Node.js and PostgreSQL, I was able to create a backend API for storing information pertaining to potlucks that are being planned by the users. The code for the API can be found <a href="https://github.com/caralocke/potluck-planner-07" target="_blank">here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Do you have an idea for something and want to see if I could help make it a reality?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -145,7 +145,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<form method="post" action="mailto:cara.m.locke@gmail.com">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -173,11 +173,7 @@
 							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="https://www.linkedin.com/in/cara-locke/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="https://github.com/caralocke" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
