--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://humanrightsfirstdocdb.dev/" class="image featured"><img src="images/HRF.png" alt="" /></a>
+								<h3><a href="#">Human Rights First Document Database</a></h3>
+								<p>With the Human Rights First Document Database project, I worked with about 30 other developers to create a database for the Human Rights First Organization in which they could easily search and view documents. I cannot go into much detail as the material stored here is very sensitive, but we were hailed with it being a much needed resource for them that we were able to provide.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
