--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</article>
 
 		<!-- Work -->
-			<article id="work" class="wrapper style2">
+			<!-- <article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
@@ -76,7 +76,7 @@
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
-			</article>
+			</article> -->
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -121,12 +121,12 @@
 								<p>With the Human Rights First Document Database project, I worked with about 30 other developers to create a database for the Human Rights First Organization in which they could easily search and view documents. I cannot go into much detail as the material stored here is very sensitive, but we were hailed with it being a much needed resource for them that we were able to provide.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
-							</article>
+							</article> -->
 						</div>
 					</div>
 					<footer>
@@ -161,7 +161,7 @@
 									</div>
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="submit"  value="Send Message" action="mailto:cara.m.locke@gmail.com"/></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 										</ul>
 									</div>
