--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<p>I'm always interested in seeing what I can help someone with, so lets give it a try!</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="mailto:cara.m.locke@gmail.com">
+							<form method="post" action="https://formsubmit.co/847816be8e953105ed3f5481619f2da5">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -161,7 +161,7 @@
 									</div>
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="submit"  value="Send Message" action="mailto:cara.m.locke@gmail.com"/></li>
+											<li><input type="submit"  value="Send Message" /></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 										</ul>
 									</div>
