Updated links to direct user to url properly

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://frontend-nine-omega.vercel.app/" class="image featured"><img src="images/WaterMyPlants.png" alt="" /></a>
-								<h3><a href="#">🌱 Water My Plants 🌱</a></h3>
+								<h3><a href="https://frontend-nine-omega.vercel.app/">🌱 Water My Plants 🌱</a></h3>
 								<p>For "Water My Plants," I worked with some fantastic team members. My contributions were to help with the functionality (using JavaScript and React) as well as setting up routes and links.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://potluck-planner-07.netlify.app/" class="image featured"><img src="images/Potluck.png" alt="" /></a>
-								<h3><a href="#">Potluck Planner</a></h3>
+								<h3><a href="https://potluck-planner-07.netlify.app/">Potluck Planner</a></h3>
 								<p>Potluck Planner was my first ever project where I built a RESTful API for a fullstack web application. Using Node.js and PostgreSQL, I was able to create a backend API for storing information pertaining to potlucks that are being planned by the users. The code for the API can be found <a href="https://github.com/caralocke/potluck-planner-07" target="_blank">here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://humanrightsfirstdocdb.dev/" class="image featured"><img src="images/hrf.JPG" alt="" /></a>
-								<h3><a href="#">Human Rights First Document Database</a></h3>
+								<h3><a href="https://humanrightsfirstdocdb.dev/">Human Rights First Document Database</a></h3>
 								<p>With the Human Rights First Document Database project, I worked with about 30 other developers to create a database for the Human Rights First Organization in which they could easily search and view documents. I cannot go into much detail as the material stored here is very sensitive, but we were hailed with it being a much needed resource for them that we were able to provide.</p>
 							</article>
 						</div>
