Added a project and made each open in a new tab

--- a/index.html
+++ b/index.html
@@ -88,49 +88,49 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://nasa-photo-of-the-day-taupe.vercel.app/" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
+								<a href="https://nasa-photo-of-the-day-taupe.vercel.app/" target="_blank" class="image featured"><img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" /></a>
 								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/">Nasa Photo of the Day 🚀</a></h3>
 								<p>This project focused on learning how to use api calls, how to work with the promise returned from an api call, and how to use api keys.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://front-end-rho-sable.vercel.app/" class="image featured"><img src="images/Pintereach.png" alt="" /></a>
+								<a href="https://front-end-rho-sable.vercel.app/" target="_blank" class="image featured"><img src="images/Pintereach.png" alt="" /></a>
 								<h3><a href="https://front-end-rho-sable.vercel.app/">Pintereach</a></h3>
 								<p>This project was my first working as a team. For my contributions, I was asked to do the styling of the components as well as create the navigation bar.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://frontend-nine-omega.vercel.app/" class="image featured"><img src="images/WaterMyPlants.png" alt="" /></a>
+								<a href="https://frontend-nine-omega.vercel.app/" target="_blank" class="image featured"><img src="images/WaterMyPlants.png" alt="" /></a>
 								<h3><a href="https://frontend-nine-omega.vercel.app/">🌱 Water My Plants 🌱</a></h3>
 								<p>For "Water My Plants," I worked with some fantastic team members. My contributions were to help with the functionality (using JavaScript and React) as well as setting up routes and links.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://potluck-planner-07.netlify.app/" class="image featured"><img src="images/Potluck.png" alt="" /></a>
+								<a href="https://potluck-planner-07.netlify.app/" target="_blank" class="image featured"><img src="images/Potluck.png" alt="" /></a>
 								<h3><a href="https://potluck-planner-07.netlify.app/">Potluck Planner</a></h3>
 								<p>Potluck Planner was my first ever project where I built a RESTful API for a fullstack web application. Using Node.js and PostgreSQL, I was able to create a backend API for storing information pertaining to potlucks that are being planned by the users. The code for the API can be found <a href="https://github.com/caralocke/potluck-planner-07" target="_blank">here</a></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://humanrightsfirstdocdb.dev/" class="image featured"><img src="images/hrf.JPG" alt="" /></a>
+								<a href="https://humanrightsfirstdocdb.dev/" target="_blank" class="image featured"><img src="images/hrf.JPG" alt="" /></a>
 								<h3><a href="https://humanrightsfirstdocdb.dev/">Human Rights First Document Database</a></h3>
 								<p>With the Human Rights First Document Database project, I worked with about 30 other developers to create a database for the Human Rights First Organization in which they could easily search and view documents. I cannot go into much detail as the material stored here is very sensitive, but we were hailed with it being a much needed resource for them that we were able to provide.</p>
 							</article>
 						</div>
-						<!-- <div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article> -->
+								<a href="https://mock-amazon-project.vercel.app/" target="_blank" class="image featured"><img src="images/amazon.JPG" alt="" /></a>
+								<h3><a href="#">Mock Amazon E-Commerce Site</a></h3>
+								<p>This mock "Amazon" e-commerce site was created using JavaScript. </p>
+							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Do you have an idea for something and want to see if I could help make it a reality?</p>
+						<p>Do you think I would be a valuable asset to your team?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -140,7 +140,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
+						<h2>Contact me!</h2>
 						<p>I'm always interested in seeing what I can help someone with, so lets give it a try!</p>
 					</header>
 					<div class="row">
