Added a new project

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<article class="box style2">
 								<a href="https://nasa-photo-of-the-day-taupe.vercel.app/" target="_blank" class="image featured">
 									<img src="images/Nasa.png" alt="Screenshot of my NasaPOTD site" class="project-img" /></a>
-								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/">Nasa Photo of the Day 🚀</a></h3>
+								<h3><a href="https://nasa-photo-of-the-day-taupe.vercel.app/" target="_blank">Nasa Photo of the Day 🚀</a></h3>
 								<p>This project was created with React, focused on learning how to use api calls with Axios, how to work with the promise returned from an api call, and how to use api keys. I also used this project to practice some styling tricks using Styled Components.</p>
 								<div class="repo-container">
 									<div class="front-end-repo-container">
@@ -153,17 +153,26 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://frontend-nine-omega.vercel.app/" target="_blank" class="image featured">
-									<img src="images/WaterMyPlants.png" alt="" class="project-img"/></a>
-								<h3><a href="https://frontend-nine-omega.vercel.app/">🌱 Water My Plants 🌱</a></h3>
-								<p>For "Water My Plants," I worked with some fantastic team members. My contributions were to help with the front end functionality using JavaScript and React, as well as setting up routes and links using React-Router-Dom.</p>
+								<a href="https://suits-frontend.vercel.app/" target="_blank" class="image featured">
+									<img src="images/ShowSite.JPG" alt="" class="project-img"/></a>
+								<h3><a href="https://suits-frontend.vercel.app/" target="_blank">Plug and Play</a></h3>
+								<p>For "Plug and Play," I created a front end web application with React.js capable of displaying different data throughout the app, based on the click of a button. There are three different versions of this app, just select a "show!" The data for this application is pulled from an API I created with Node.js and Express </p>
 								<div class="repo-container">
 									<div class="front-end-repo-container">
 										<p class="front-end-repo">Front end repo:
 											<div>
-												<a href="https://github.com/ft-watermyplants6/frontend" target="_blank">
+												<a href="https://github.com/caralocke/suits-frontend" target="_blank">
 													<img src="https://img.shields.io/badge/GitHub-181717.svg?style=for-the-badge&logo=GitHub&logoColor=white"/>
 												</a>	
+											</div>																						
+										</p>
+									</div>
+									<div class="back-end-repo-container">
+										<p class="front-end-repo">Back end repo:
+											<div>
+												<a href="https://github.com/caralocke/Show-API" target="_blank">
+													<img src="https://img.shields.io/badge/GitHub-181717.svg?style=for-the-badge&logo=GitHub&logoColor=white"/>
+												</a>		
 											</div>																						
 										</p>
 									</div>
@@ -174,7 +183,7 @@
 							<article class="box style2">
 								<a href="https://potluck-planner-07.netlify.app/" target="_blank" class="image featured">
 									<img src="images/Potluck.png" alt="Potluck" class="project-img" /></a>
-								<h3><a href="https://potluck-planner-07.netlify.app/">Potluck Planner</a></h3>
+								<h3><a href="https://potluck-planner-07.netlify.app/" target="_blank">Potluck Planner</a></h3>
 								<p>Potluck Planner was my first ever project where I built a RESTful API for a fullstack web application. Using Node.js and PostgreSQL, I was able to create a backend API for storing information pertaining to potlucks that are being planned by the users. The code for the API can be found <a href="https://github.com/caralocke/potluck-planner-07" target="_blank">here</a></p>
 							</article>
 						</div>
@@ -182,7 +191,7 @@
 							<article class="box style2">
 								<a href="https://front-end-rho-sable.vercel.app/" target="_blank" class="image featured">
 									<img src="images/Pintereach.png" alt="Pintereach" class="project-img" /></a>
-								<h3><a href="https://front-end-rho-sable.vercel.app/">Pintereach</a></h3>
+								<h3><a href="https://front-end-rho-sable.vercel.app/" target="_blank">Pintereach</a></h3>
 								<p>This project was my first working as a team. For my contributions, I was asked to do the styling of the components as well as create the navigation bar.</p>
 							</article>
 						</div>
@@ -190,7 +199,7 @@
 							<article class="box style2">
 								<a href="https://mock-amazon-project.vercel.app/" target="_blank" class="image featured">
 									<img src="images/amazon.JPG" alt="Mock Amazon" class="project-img" /></a>
-								<h3><a href="#">Mock Amazon E-Commerce Site</a></h3>
+								<h3><a href="https://mock-amazon-project.vercel.app/" target="_blank">Mock Amazon E-Commerce Site</a></h3>
 								<p>This mock "Amazon" e-commerce site was created using JavaScript. </p>
 							</article>
 						</div>
