Updated Plug and Play URL

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://suits-frontend.vercel.app/" target="_blank" class="image featured">
+								<a href="https://pick-a-show.vercel.app/" target="_blank" class="image featured">
 									<img src="images/ShowSite.JPG" alt="" class="project-img"/></a>
-								<h3><a href="https://suits-frontend.vercel.app/" target="_blank">Plug and Play</a></h3>
+								<h3><a href="https://pick-a-show.vercel.app/" target="_blank">Plug and Play</a></h3>
 								<p>For "Plug and Play," I created a front end web application with React.js capable of displaying different data throughout the app, based on the click of a button. There are three different versions of this app, just select a "show!" The data for this application is pulled from an API I created with Node.js and Express </p>
 								<div class="repo-container">
 									<div class="front-end-repo-container">
