Removed some old projects and updated images

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
+						<div class="col-5-large col-12-medium">
 							<span class="image fit"><img src="images/profilePic.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Cara Locke</strong>.</h1>
 							</header>
-							<p>And this is <strong>my portfolio</strong>. I'm a web developer currently with skills in JavaScript, React, Redux, Node.js, CSS, and HTML.</p>
+							<p>I'm a <strong>Web Developer</strong> with skills in both front and back end technologies.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -179,28 +179,39 @@
 								</div>	
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://potluck-planner-07.netlify.app/" target="_blank" class="image featured">
 									<img src="images/Potluck.png" alt="Potluck" class="project-img" /></a>
 								<h3><a href="https://potluck-planner-07.netlify.app/" target="_blank">Potluck Planner</a></h3>
 								<p>Potluck Planner was my first ever project where I built a RESTful API for a fullstack web application. Using Node.js and PostgreSQL, I was able to create a backend API for storing information pertaining to potlucks that are being planned by the users. The code for the API can be found <a href="https://github.com/caralocke/potluck-planner-07" target="_blank">here</a></p>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</div> -->
+						<!-- <div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://front-end-rho-sable.vercel.app/" target="_blank" class="image featured">
 									<img src="images/Pintereach.png" alt="Pintereach" class="project-img" /></a>
 								<h3><a href="https://front-end-rho-sable.vercel.app/" target="_blank">Pintereach</a></h3>
 								<p>This project was my first working as a team. For my contributions, I was asked to do the styling of the components as well as create the navigation bar.</p>
 							</article>
-						</div>
+						</div> -->
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://mock-amazon-project.vercel.app/" target="_blank" class="image featured">
 									<img src="images/amazon.JPG" alt="Mock Amazon" class="project-img" /></a>
 								<h3><a href="https://mock-amazon-project.vercel.app/" target="_blank">Mock Amazon E-Commerce Site</a></h3>
-								<p>This mock "Amazon" e-commerce site was created using JavaScript. </p>
+								<p>This mock "Amazon" e-commerce site was created using HTML, styled with CSS, and the functionality was created using Vanilla JavaScript. </p>
+								<div class="repo-container">
+									<div class="front-end-repo-container">
+										<p class="front-end-repo">Front end repo:
+											<div>
+												<a href="https://github.com/caralocke/Mock-Amazon-Project" target="_blank">
+													<img src="https://img.shields.io/badge/GitHub-181717.svg?style=for-the-badge&logo=GitHub&logoColor=white"/>
+												</a>	
+											</div>																						
+										</p>
+									</div>
+								</div>	
 							</article>
 						</div>
 					</div>
